--- a/portfolio/deno.json
+++ b/portfolio/deno.json
@@ -37,20 +37,29 @@
         "re-watcher": "./libraries/re-watcher/index.esm.js",
         "un-ino": "./libraries/un-ino/index.esm.js",
         "logger": "./libraries/logger/nope-index.esm.js",
-        "kv-oauth": "jsr:@deno/kv-oauth",
+        "kv-oauth": "jsr:@deno/kv-oauth@0.11.0",
+        "cookie": "jsr:@std/http@1.0.12/cookie",
         "preact": "https://esm.sh/preact@10.25.0",
         "preact/": "https://esm.sh/preact@10.25.0/",
-        "preact-render-to-string": "https://esm.sh/preact-render-to-string@6.5.11"
+        "preact-render-to-string": "https://esm.sh/preact-render-to-string@6.5.11",
+        "deno-dom": "jsr:@b-fuze/deno-dom@0.1.48",
+        "encoding/base64": "jsr:@std/encoding@1.0.5/base64"
     },
     "compilerOptions": {
-        "lib": ["deno.window"],
+        "lib": [
+            "DOM",
+            "DOM.AsyncIterable",
+            "DOM.Iterable",
+            "deno.ns",
+            "ESNext"
+        ],
         "strict": true,
         "jsx": "react-jsx",
         "jsxImportSource": "preact"
     },
-    "unstable": ["kv"],
+    "unstable": ["kv", "ffi"],
     "tasks": {
-        "start": "deno run --env-file main.esm.js",
-        "dev": "deno run -A --env-file --watch=libraries/,routes/ main.esm.js"
+        "start": "deno run --env-file ./main.esm.js",
+        "dev": "deno run -A --env-file --watch=./libraries/,./routes/ ./main.esm.js"
     }
 }
