--- a/portfolio/.env.example
+++ b/portfolio/.env.example
@@ -1,3 +1,8 @@
 GITHUB_OWNER=""
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
+SMTP_HOST=""
+SMTP_AUTH_USERNAME=""
+SMTP_AUTH_PASSWORD=""
+SMTP_SEND_FROM=""
+SMTP_SEND_TO=""
